--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,11 @@
 .custom-swal-cancel-button {
   @apply text-white btn btn-error !important;
 }
+
+.custom-swal-popup-image {
+  @apply rounded-2xl h-[90vh] w-[90%] !important;
+}
+
+.custom-swal-popup-image img {
+  @apply h-[85vh] text-center items-center !important;
+}
